Updating the user model